--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tetris Game</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tetris Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <h1>Tetris Game</h1>
-  <canvas id="tetris" width="300" height="600"></canvas>
-  <script src="script.js"></script>
+    <h1>Tetris Game</h1>
+    <canvas id="tetris" width="320" height="640"></canvas>
+    
+    <!-- Touch Control Buttons -->
+    <div id="controls">
+        <button id="left-btn">Left</button>
+        <button id="rotate-btn">Rotate</button>
+        <button id="right-btn">Right</button>
+        <button id="down-btn">Down</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
